--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <!-- favicon png-->
     <link rel="icon" href="static/images/favicon.png" type="image/png" />
 
-    <title>Yuvashakti Library</title>
+    <title>Yuvashakti's Library</title>
   </head>
   <body>
     <section class="header">
